# c---engine

./: .gitmodules  README.md  TODO.md
InfernalCore/: CMakeLists.txt
InfernalCore/assets/maps/: level1.json
InfernalCore/include/core/: Game.h  Log.h  Vector2.h
InfernalCore/include/entity/: Enemy.h  Entity.h  Player.h
InfernalCore/include/game/: Level.h
InfernalCore/include/gfx/: TextureManager.h
InfernalCore/include/input/: Input.h
InfernalCore/src/: CMakeLists.txt
InfernalCore/src/core/: Game.cpp  Game.h  Log.cpp
InfernalCore/src/entity/: Enemy.cpp  Player.cpp
InfernalCore/src/game/: Level.cpp  main.cpp
InfernalCore/src/gfx/: TextureManager.cpp
InfernalCore/src/input/: Input.cpp
docs/: INFERNAL_ASCENT_DESIGN.md
